--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
       "@context": "https://schema.org",
       "@type": "WebSite",
       "name": "Chinese Anime 3D Sub Ai",
-      "url": "https://ds.xhtml.cfd",
+      "url": "http://ca3d.site/",
       "potentialAction": {
         "@type": "SearchAction",
-        "target": "https://ds.xhtml.cfd/?q={search_term_string}",
+        "target": "https://ca3d.site/?q={search_term_string}",
         "query-input": "required name=search_term_string"
       }
     }
@@ -257,7 +257,8 @@
     </div>
 
     <script>
-        const CONFIG = { workerUrl: "https://ds.yijedok676-351.workers.dev" }; 
+        const CONFIG = { workerUrl: "backup3d.ruslirusli123091.workers.dev
+" }; 
         
         // --- FUNGSI LOAD IKLAN DINAMIS ---
         function manageAds() {
