--- a/index.html
+++ b/index.html
@@ -257,8 +257,7 @@
     </div>
 
     <script>
-        const CONFIG = { workerUrl: "https://backup3d.ruslirusli123091.workers.dev
-" }; 
+       const CONFIG = { workerUrl: "https://backup3d.ruslirusli123091.workers.dev" }; 
         
         // --- FUNGSI LOAD IKLAN DINAMIS ---
         function manageAds() {
