--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
     <!-- ICON -->
     <link rel="icon" href="favicon.ico" sizes="any">
     <script type="text/javascript" src="https://pl28253644.effectivegatecpm.com/45/a0/58/45a058537afdc6637f4b27d76241566d.js" ></script>
-
     <style>
         body { background-color: #0f172a; color: #cbd5e1; -webkit-tap-highlight-color: transparent; }
         .hide { display: none !important; }
@@ -61,14 +60,23 @@
 </head>
 <body class="min-h-screen flex flex-col font-sans text-sm pb-20 select-none"> 
 
-    <!-- HEADER -->
+    <!-- HEADER (FIXED SEARCH) -->
     <header class="bg-slate-900/95 backdrop-blur-md border-b border-slate-800 sticky top-0 z-40 h-16 px-4 flex items-center justify-between gap-3 shadow-lg">
         <a href="/" onclick="event.preventDefault(); navigateTo('/');" class="flex-shrink-0">
             <img src="logo.png" alt="CA3D" class="h-10 w-auto object-contain" onerror="this.style.display='none'; this.nextElementSibling.style.display='block';">
             <span class="text-lg font-black italic bg-gradient-to-r from-blue-500 to-cyan-400 bg-clip-text text-transparent tracking-tighter hidden">Chinese<span class="text-white not-italic font-bold">3D</span></span>
         </a>
         <div class="relative flex-1 max-w-md">
-            <input type="search" id="site_search_query" autocomplete="off" oninput="doSearch(this.value)" placeholder="Cari Donghua..." class="w-full bg-slate-800 text-gray-200 text-xs rounded-full pl-4 pr-4 py-2.5 border border-slate-700 focus:border-blue-500 outline-none transition focus:bg-slate-900">
+            <!-- Penambahan name="search_query_unique" untuk mencegah autofill username -->
+            <input 
+                type="search" 
+                id="site_search_query" 
+                name="search_query_unique" 
+                autocomplete="off" 
+                oninput="doSearch(this.value)" 
+                placeholder="Cari Donghua..." 
+                class="w-full bg-slate-800 text-gray-200 text-xs rounded-full pl-4 pr-4 py-2.5 border border-slate-700 focus:border-blue-500 outline-none transition focus:bg-slate-900"
+            >
             <div id="search-results" class="absolute top-full left-0 w-full mt-2 bg-slate-800 rounded-xl shadow-2xl border border-slate-700 max-h-80 overflow-y-auto hide z-50 p-2"></div>
         </div>
     </header>
