--- a/admin.html
+++ b/admin.html
@@ -146,7 +146,7 @@
     </div>
 
     <script>
-        const CONFIG = { workerUrl: "https://ds.yijedok676-351.workers.dev" }; 
+        const CONFIG = { workerUrl: "https://backup3d.ruslirusli123091.workers.dev" }; 
         let appData = { donghua: [] };
         let onReauthSuccess = null;
 
