--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 
     <script>
         // CONFIG
-        const CONFIG = { workerUrl: "https://ds.yijedok676-351.workers.dev" }; 
+        const CONFIG = { workerUrl: "https://backup3d.ruslirusli123091.workers.dev" }; 
         
         // STATE
         let appData = { donghua: [] }, chatData = { comments: [] }, currentUser = null, currentUserNameDisplay = "";
