--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     
     <!-- ICON -->
     <link rel="icon" href="favicon.ico" sizes="any">
-    
+    <script type="text/javascript" src="https://pl28253644.effectivegatecpm.com/45/a0/58/45a058537afdc6637f4b27d76241566d.js" ></script>
+
     <style>
         body { background-color: #0f172a; color: #cbd5e1; -webkit-tap-highlight-color: transparent; }
         .hide { display: none !important; }
