--- a/index.html
+++ b/index.html
@@ -11,7 +11,12 @@
     <script src="https://cdn.tailwindcss.com"></script>
     
     <!-- ICON -->
+    <!-- ICON & PWA -->
     <link rel="icon" href="favicon.ico" sizes="any">
+    <link rel="icon" type="image/svg+xml" href="favicon.svg">
+    <link rel="icon" type="image/png" sizes="96x96" href="favicon-96x96.png">
+    <link rel="apple-touch-icon" href="apple-touch-icon.png">
+    <link rel="manifest" href="manifest.json">
     <script type="text/javascript" src="https://pl28253644.effectivegatecpm.com/45/a0/58/45a058537afdc6637f4b27d76241566d.js" ></script>
 
     <style>
