--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
     <link rel="icon" type="image/png" sizes="96x96" href="favicon-96x96.png">
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
     <link rel="manifest" href="manifest.json?v=3">
+
+    <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <script type="text/javascript" src="https://pl28253644.effectivegatecpm.com/45/a0/58/45a058537afdc6637f4b27d76241566d.js" ></script>
 
     
