--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
     <title>Chinese Anime 3D Sub Ai - Nonton Donghua Sub Indo</title>
     <meta name="description" content="Nonton streaming Chinese Anime 3D (Donghua) terbaru dengan subtitle Indonesia. Update setiap hari, gratis.">
     <meta name="theme-color" content="#0f172a">
+
+    <meta property="og:url" content="https://domain-anda.com/?page=synopsis&id=some-id" />
+    <meta property="og:title" content="Judul Donghua Keren - Nonton Donghua Sub Indo" />
+    <meta property="og:description" content="Ini adalah sinopsis dari Donghua Keren..." />
+    <meta property="og:image" content="https://gambar-donghua.com/poster.jpg" />
+    <meta property="og:type" content="video.tv_show" />
+    <meta name="twitter:card" content="summary_large_image" />
     
     <!-- PRECONNECT -->
     <link rel="preconnect" href="https://cdn.tailwindcss.com">
