--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <meta name="description" content="Nonton streaming Chinese Anime 3D (Donghua) terbaru dengan subtitle Indonesia. Update setiap hari, gratis.">
     <meta name="theme-color" content="#0f172a">
 
-    <meta property="og:title" content="Chinese Anime 3D Sub Ai - Nonton Donghua Sub Indo" />
-    <meta property="og:description" content="Nonton streaming Chinese Anime 3D (Donghua) terbaru dengan subtitle Indonesia. Update setiap hari, gratis." />
+   <meta property="og:title" content="Chinese Anime 3D Sub Ai - Nonton Donghua Sub Indo" />
+    <meta property="og:description" content="Nonton streaming Chinese Anime 3D (Donghua) terbaru." />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://ca3d.site/" /> <!-- Ganti dengan URL situs Anda -->
-    <meta property="og:image" content="https://ca3d.site/logo.png" /> <!-- Ganti dengan URL logo atau gambar banner utama -->
+    <meta property="og:url" content="https://ca3d.site/" /> <!-- PASTIKAN INI URL HOMEPAGE ANDA -->
+    <meta property="og:image" content="https://ca3d.site/logo.png" /> <!-- GANTI DENGAN URL LOGO ANDA -->
     <meta name="twitter:card" content="summary_large_image" />
     
     <!-- PRECONNECT -->
