--- a/index.html
+++ b/index.html
@@ -306,6 +306,16 @@
         </div>
     </main>
 
+    <div id="pwa-popup" class="app-popup hide">
+        <button onclick="closeAppPopup()" class="btn-app-close">✕</button>
+        <img src="https://ca3d.site/web-app-manifest-192x192.png" onerror="this.src='logo.png'" alt="App Icon" class="app-icon">
+        <div class="app-content">
+            <div class="app-title">Install Aplikasi CA3D</div>
+            <div class="app-desc">Nonton lebih lancar & hemat kuota!</div>
+        </div>
+        <button id="btn-pwa-install" class="btn-app-install">INSTALL</button>
+    </div>
+
     <nav class="bottom-nav">
         <button onclick="navigateTo('/')" id="nav-home" class="nav-btn">
             <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"></path></svg>
